# python-project-50

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: python_ci.yml  run_tests.yml
gendiff/: __init__.py  comparator.py  compare.py  console.py  gendiff.py  json.py  plain.py  report.py  stylish.py  view.py
gendiff/formatters/: __init__.py  format.py  json.py  plain.py  stylish.py
gendiff/report/: __init__.py  report.py
gendiff/scripts/: converter.py  gendiff.py
hexlet_code/scripts/: converter.py  gendiff.py
scripts/: converter.py  gendiff.py
tests/: test_errors.py  test_gendiff.py  test_json.py  test_json_nested.py  test_nested.py  test_yaml.py  test_yaml_nested.py
tests/fixtures/: result_json.json  test1_result  test3_json_result.json
