[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Compare two configuration files"
authors = ["Aigars Sinevics <aigarzs@gmail.com>"]
readme = "README.md"
packages = [{ include = "hexlet_code" },
	{ include =  "gendiff" }
	]
 
[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.scripts]
gendiff = "hexlet_code.scripts.gendiff:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
